--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: 不正
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>歪歪</h1>
+	<p>这是我的第n个博客。从QQ/百度空间到Wordpress.com, 再到现在的Github Page</p>
 </div><!-- /.blurb -->
