--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
-title: 不正
+title: 歪歪
 ---
-<div class="blurb">
-	<h1>歪歪</h1>
-	<p>这是我的第n个博客。从QQ/百度空间到Wordpress.com, 再到现在的Github Page</p>
-</div><!-- /.blurb -->
+	<h1>{{ page.title }}</h1>
+	<ul class="posts">
+
+	  {% for post in site.posts %}
+	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
+	  {% endfor %}
+	</ul>
