--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 layout: default
 title: 歪歪
 ---
-	<h1>{{ page.title }}</h1>
-	<ul class="posts">
-
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+    <h1>{{ page.title }}</h1>
+    <hr>
+    {% for post in site.posts %}
+        <h2>{{ post.title }}</h2>
+        <h3>{{ post.date | date_to_string }}</h3>
+        {{ post.content }}   
+        <hr>	  
+    {% endfor %}
+    
+    
